Fixed button colours on mobile

--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -166,7 +166,7 @@
     font-family: Cabin;
     border: none;
     border-radius: 90px;
-
+    color:black;
     background-color: $text-box-color;
 
     height: 4vh;
