--- a/frontend/src/app/signup/signup.component.scss
+++ b/frontend/src/app/signup/signup.component.scss
@@ -123,7 +123,7 @@
     font-family: Cabin;
     border: none;
     border-radius: 90px;
-
+    color: black;
     background-color: #ffffff;
 
     height: 4vh;
